{{$NEXT}}

     Fixed bug where Pinto might blow up with 'too many args'
     error the first time you update from a CPAN mirror.

0.024     2011-09-01 15:23:48 America/Los_Angeles

     Added a "version" command to pinto-admin

     General code refactoring

     No interface changes

0.023     2011-08-31 14:18:49 America/Los_Angeles

     * Interface Changes:

     The "remove" operation now works on distribution names, rather
     than package names.  You must specify the full name of the
     distribution, including version number and extension.

     * Other Good Stuff:

     Wrote the manuals for each of the pinto-admin commands.
     Say `pinto-admin COMMAND --man` to see them.

0.022     2011-08-31 01:31:04 America/Los_Angeles

     * Interface Changes:

     You no longer need to specify the Subversion trunk in your
     pinto.ini (if you were using Pinto::Store::VCS::Svn).  The
     location of your Pinto repository in subversion is implicit in
     the `svn info` of the working copy.  Secondly, the "create"
     action no longer takes care of making a location in Subversion
     for you.  So you now have to do a little more work to setup Pinto
     with Subversion.  See the POD in Pinto::Store::VCS::Svn for
     step-by-step instructions.

     You can no longer specify a VCS tag in your pinto.ini.  Making
     a tag after every commit doesn't make sense.  So now, a tag
     is only made if you explicitly set a --tag on the command line.
     Likewise, the --notag command line switch has been removed,
     since the absence of a --tag is equivalent to --notag.

     * Bug Fixes:

     The "update" command was broken, following rename from "mirror".
     Doh!

0.021     2011-08-30 01:16:55 America/Los_Angeles

     * Interface Changes:

     The "mirror" command is now called "update".  I feel this more
     accurately reflects what is going on, since a Pinto repository
     isn't really a "mirror" of anything.
   
     * Bug Fixes:
