@@ -1,7 +1,15 @@
 {{$NEXT}}
 
-     Fixed bug where Pinto might blow up with 'too many args'
-     error the first time you update from a CPAN mirror.
+     * Bug Fixes:
+
+     Fixed bug where Pinto might blow up with 'too many args' error
+     the first time you update from a CPAN mirror.
+
+     * Enhancements:
+
+     The 'create' command for pinto-admin now accepts options to set
+     the parameters in the config file that will be generated for the
+     new repository.
 
 0.024     2011-09-01 15:23:48 America/Los_Angeles
 
